<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@xml/rounded"
    android:orientation="vertical"
    android:padding="15dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/bs_tv_line_name_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:text="금당간 SW1"
            android:textColor="#444"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bs_tv_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="18"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <TextView
        android:id="@+id/bs_tv_computerized_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8673B1938" />

    <TextView
        android:id="@+id/bs_tv_manufacturing_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="보성하이텍 2508052 (2005.08)" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_sheet_address"
        android:textColor="#444"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bs_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="평창군 대관령면 수하리 166-18" />

    <ToggleButton
        android:id="@+id/btn_project_detail_bs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:foreground="?attr/selectableItemBackground"
        android:textOff="@string/bottom_sheet_button_text_off"
        android:textOn="@string/bottom_sheet_button_text_on"
        android:fontFamily="@font/sc_dream4"
        android:textColor="#fff" />

</LinearLayout>