<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/list_layout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@xml/gradient_background"
            app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/CollapsingToolbar.TitleText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/main_button_menu2">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/main_button_menu2" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        android:fillViewport="true"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_report_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="#00FFFFFF"
            android:dividerHeight="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/iv_isEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/not_found"
        android:src="@drawable/not_found_icon"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_report_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>